# dog-pose-ai-backend

./: .gitignore  README.md  app.py  pyproject.toml
notebooks/: colab_dog_pose_training.ipynb
scripts/: train_dog_pose.py  train_dog_pose_colab.py
src/dog_pose_mvp/: __init__.py  gait.py  skeleton.py  visualization.py
src/dog_pose_mvp/api/: __init__.py  dependencies.py  exceptions.py  main.py  repository.py  router.py  schemas.py  service.py
tests/: __init__.py  test_api.py  test_gait.py
